@@ -16,13 +16,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pylapp.smoothclicker">
 
+
     <!-- *********** -->
     <!-- Permissions -->
     <!-- *********** -->
 
-
     <!-- To be SU -->
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
+    <!-- To make the device vibrate (here on each click or on start if needed) -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
 
     <!-- ********************* -->
     <!-- The SmoothClicker app -->
