@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="2dp">
+        card_view:cardElevation="5dp">
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="2dp">
+        card_view:cardElevation="5dp">
 
         <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
